--- a/index.html
+++ b/index.html
@@ -555,8 +555,12 @@
       // Initialize with Dashboard view (app hidden initially)
       showDashboard();
     </script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
 
-    <!-- External JavaScript -->
-    <script src="scripts.js"></script>
+  <!-- External JavaScript -->
+  <script src="scripts.js"></script>
 </body>
 </html>
