--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Custom styles for enhanced visuals */
     .budget-tile {
       transition: transform 0.2s ease-in-out;
     }
@@ -265,7 +264,6 @@
                 </tr>
               </thead>
               <tbody id="transaction-table" class="bg-white divide-y divide-gray-200">
-                <!-- Example Transaction -->
                 <tr class="table-row">
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Debit</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹5,000</td>
@@ -315,7 +313,6 @@
                 </tr>
               </thead>
               <tbody id="budget-table" class="bg-white divide-y divide-gray-200">
-                <!-- Example Budget -->
                 <tr class="table-row">
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Groceries</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹50,000</td>
@@ -377,7 +374,6 @@
                 </tr>
               </thead>
               <tbody id="category-table" class="bg-white divide-y divide-gray-200">
-                <!-- Example Category -->
                 <tr class="table-row">
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Weekly Shopping</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Expense</td>
@@ -415,7 +411,7 @@
             <label for="new-category-budget" class="block text-sm font-medium text-gray-700">Associated Budget</label>
             <select id="new-category-budget" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
               <option value="groceries">Groceries</option>
-              <ISON value="entertainment">Entertainment</option>
+              <option value="entertainment">Entertainment</option>
               <option value="travel">Travel</option>
               <option value="none">None</option>
             </select>
@@ -455,14 +451,26 @@
     </footer>
 
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
-
-    <!-- Minimal JavaScript for UI -->
+    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js" async></script>
+    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js" async></script>
+    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js" async></script>
+    <!-- SDK Load Detection -->
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        console.log('DOM loaded, initializing script');
+      document.addEventListener('DOMContentLoaded', function() {
+        console.log('Checking Firebase SDK load status');
+        setTimeout(function() {
+          if (typeof window.firebase === 'undefined' || !window.firebase.initializeApp) {
+            console.error('Firebase SDK failed to load after 3s timeout. Check network, browser restrictions, or script URLs.');
+          } else {
+            console.log('Firebase SDK loaded successfully');
+          }
+        }, 3000);
+      });
+    </script>
+    <!-- UI Script -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        console.log('DOM loaded, initializing UI script');
         try {
           // Authentication Modals
           console.log('Querying modal elements');
@@ -475,7 +483,15 @@
           const showLoginFromResetBtn = document.getElementById('show-login-from-reset');
 
           if (!loginModal || !signupModal || !resetModal || !showSignupBtn || !showResetBtn || !showLoginFromSignupBtn || !showLoginFromResetBtn) {
-            throw new Error('One or more modal elements not found');
+            throw new Error('One or more modal elements not found: ' + JSON.stringify({
+              loginModal: !!loginModal,
+              signupModal: !!signupModal,
+              resetModal: !!resetModal,
+              showSignupBtn: !!showSignupBtn,
+              showResetBtn: !!showResetBtn,
+              showLoginFromSignupBtn: !!showLoginFromSignupBtn,
+              showLoginFromResetBtn: !!showLoginFromResetBtn
+            }));
           }
 
           console.log('Defining modal toggle functions');
@@ -501,22 +517,22 @@
           }
 
           console.log('Binding event listeners for modal buttons');
-          showSignupBtn.addEventListener('click', () => {
+          showSignupBtn.addEventListener('click', function() {
             console.log('Show Signup button clicked');
             showSignupModal();
           });
 
-          showResetBtn.addEventListener('click', () => {
+          showResetBtn.addEventListener('click', function() {
             console.log('Show Reset button clicked');
             showResetModal();
           });
 
-          showLoginFromSignupBtn.addEventListener('click', () => {
+          showLoginFromSignupBtn.addEventListener('click', function() {
             console.log('Show Login from Signup button clicked');
             showLoginModal();
           });
 
-          showLoginFromResetBtn.addEventListener('click', () => {
+          showLoginFromResetBtn.addEventListener('click', function() {
             console.log('Show Login from Reset button clicked');
             showLoginModal();
           });
@@ -534,7 +550,17 @@
           const pageTitle = document.getElementById('page-title');
 
           if (!dashboardTab || !transactionsTab || !budgetsTab || !categoriesTab || !dashboardSection || !transactionsSection || !budgetsSection || !categoriesSection || !pageTitle) {
-            throw new Error('One or more tab elements not found');
+            throw new Error('One or more tab elements not found: ' + JSON.stringify({
+              dashboardTab: !!dashboardTab,
+              transactionsTab: !!transactionsTab,
+              budgetsTab: !!budgetsTab,
+              categoriesTab: !!categoriesTab,
+              dashboardSection: !!dashboardSection,
+              transactionsSection: !!transactionsSection,
+              budgetsSection: !!budgetsSection,
+              categoriesSection: !!categoriesSection,
+              pageTitle: !!pageTitle
+            }));
           }
 
           console.log('Defining tab toggle functions');
@@ -591,22 +617,22 @@
           }
 
           console.log('Binding event listeners for tab buttons');
-          dashboardTab.addEventListener('click', () => {
+          dashboardTab.addEventListener('click', function() {
             console.log('Dashboard tab clicked');
             showDashboard();
           });
 
-          transactionsTab.addEventListener('click', () => {
+          transactionsTab.addEventListener('click', function() {
             console.log('Transactions tab clicked');
             showTransactions();
           });
 
-          budgetsTab.addEventListener('click', () => {
+          budgetsTab.addEventListener('click', function() {
             console.log('Budgets tab clicked');
             showBudgets();
           });
 
-          categoriesTab.addEventListener('click', () => {
+          categoriesTab.addEventListener('click', function() {
             console.log('Categories tab clicked');
             showCategories();
           });
@@ -615,12 +641,13 @@
           console.log('Initializing with login modal');
           showLoginModal();
         } catch (error) {
-          console.error('Script error in index.html:', error.message);
+          console.error('UI script error in index.html:', {
+            message: error.message,
+            stack: error.stack
+          });
         }
       });
     </script>
-
-    <!-- External JavaScript -->
     <script src="scripts.js"></script>
 </body>
 </html>
