--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
             <div>
               <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
               <select id="category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                <option value="groceries">Groceries</option>
-                <option value="entertainment">Entertainment</option>
-                <option value="travel">Travel</option>
+                <option value="">Select Category</option>
                 <option value="add-new">Add New</option>
               </select>
             </div>
@@ -264,16 +262,7 @@
                 </tr>
               </thead>
               <tbody id="transaction-table" class="bg-white divide-y divide-gray-200">
-                <tr class="table-row">
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Debit</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹5,000</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Groceries</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Weekly shopping</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm">
-                    <button class="text-blue-600 hover:text-blue-800 mr-2 edit-transaction" data-id="1">Edit</button>
-                    <button class="text-red-600 hover:text-red-800 delete-transaction" data-id="1">Delete</button>
-                  </td>
-                </tr>
+                <!-- Populated by JavaScript -->
               </tbody>
             </table>
           </div>
@@ -313,16 +302,7 @@
                 </tr>
               </thead>
               <tbody id="budget-table" class="bg-white divide-y divide-gray-200">
-                <tr class="table-row">
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Groceries</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹50,000</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹35,000</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">₹15,000</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm">
-                    <button class="text-blue-600 hover:text-blue-800 mr-2 edit-budget" data-id="1">Edit</button>
-                    <button class="text-red-600 hover:text-red-800 delete-budget" data-id="1">Delete</button>
-                  </td>
-                </tr>
+                <!-- Populated by JavaScript -->
               </tbody>
             </table>
           </div>
@@ -349,9 +329,6 @@
             <div>
               <label for="category-budget" class="block text-sm font-medium text-gray-700">Associated Budget</label>
               <select id="category-budget" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                <option value="groceries">Groceries</option>
-                <option value="entertainment">Entertainment</option>
-                <option value="travel">Travel</option>
                 <option value="none">None</option>
                 <option value="add-new">Add New</option>
               </select>
@@ -374,15 +351,7 @@
                 </tr>
               </thead>
               <tbody id="category-table" class="bg-white divide-y divide-gray-200">
-                <tr class="table-row">
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Weekly Shopping</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Expense</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Groceries</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm">
-                    <button class="text-blue-600 hover:text-blue-800 mr-2 edit-category" data-id="1">Edit</button>
-                    <button class="text-red-600 hover:text-red-800 delete-category" data-id="1">Delete</button>
-                  </td>
-                </tr>
+                <!-- Populated by JavaScript -->
               </tbody>
             </table>
           </div>
@@ -410,10 +379,8 @@
           <div>
             <label for="new-category-budget" class="block text-sm font-medium text-gray-700">Associated Budget</label>
             <select id="new-category-budget" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-              <option value="groceries">Groceries</option>
-              <option value="entertainment">Entertainment</option>
-              <option value="travel">Travel</option>
               <option value="none">None</option>
+              <option value="add-new">Add New</option>
             </select>
           </div>
         </div>
@@ -451,20 +418,32 @@
     </footer>
 
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js" async></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js" async></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-app.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-auth.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-firestore.min.js"></script>
     <!-- SDK Load Detection -->
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         console.log('Checking Firebase SDK load status');
-        setTimeout(function() {
-          if (typeof window.firebase === 'undefined' || !window.firebase.initializeApp) {
-            console.error('Firebase SDK failed to load after 3s timeout. Check network, browser restrictions, or script URLs.');
-          } else {
-            console.log('Firebase SDK loaded successfully');
-          }
-        }, 3000);
+        try {
+          setTimeout(function() {
+            if (typeof window.firebase === 'undefined' || !window.firebase.initializeApp) {
+              console.error('Firebase SDK failed to load after 5s timeout. Check network, browser restrictions, or script URLs.', {
+                online: navigator.onLine,
+                browser: navigator.userAgent,
+                timestamp: new Date().toISOString()
+              });
+            } else {
+              console.log('Firebase SDK loaded successfully');
+            }
+          }, 5000);
+        } catch (error) {
+          console.error('Error in SDK detection:', {
+            message: error.message,
+            stack: error.stack,
+            timestamp: new Date().toISOString()
+          });
+        }
       });
     </script>
     <!-- UI Script -->
