--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@
     </footer>
 
     <!-- Firebase SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-app.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-auth.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/firebase@9.23.0/firebase-firestore.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script> 
     <!-- SDK Load Detection -->
     <script>
       document.addEventListener('DOMContentLoaded', function() {
